# pyseroepi

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: docs.yaml  publish.yaml  python-publish.yml
docs/: api.md
scripts/: generate_spatial_assets.py
src/pyseroepi/: __init__.py  __main__.py  _version.py  accessors.py  client.py  constants.py  dist.py  formulation.py  io.py  plotting.py
src/pyseroepi/app/: README.md  __init__.py  plotters.py  server.py  ui.py  utils.py
src/pyseroepi/app/old/: __init__.py  ui.py  utils.py
src/pyseroepi/data/: gazetteer_data.py
src/pyseroepi/estimators/: __init__.py  _base.py  _core.py  _modelled.py  modelled.py
src/pyseroepi/plotting/: __init__.py  _base.py
src/seroepi/: _version.py  accessors.py  client.py  constants.py  dist.py  formulation.py  io.py  plotting.py
src/seroepi/app/: README.md  __init__.py  _app.py  _burden.py  _dataset.py  _formulation.py  _logistics.py  _prevalence.py  _utils.py  server.py
src/seroepi/app/data/: pathogenwatch-klepn-klebnet-neonatal-sepsis-metadata.csv
src/seroepi/data/: gazetteer_data.py  world_boundaries.geojson
src/seroepi/estimators/: __init__.py  _base.py  _core.py  _modelled.py
src/seroepi/plotting/: __init__.py  _base.py
tests/: __init__.py  pathogenwatch-klepn-klebnet-neonatal-sepsis-kleborate.csv
