[project]
authors = [{name = "Tom Stanton", email = "tomdstanton@gmail.com"}]
name = "seroepi"
dynamic = ["version"]
description = "A Python library for bacterial sero-epidemiology"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.0",
    "pyarrow",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandera"
]

# THESE ARE FOR END-USERS (Enables: pip install seroepi[plot,models])
[project.optional-dependencies]
spatial = ['geopandas']
models = ["numpyro", "statsmodels", "joblib"]
client = ["requests", "urllib3"]
plot = ["plotly>=6.6.0", "kaleido"]
app = [
    "seroepi[spatial,models,client,plot]",
    "shiny",
    "shinywidgets",
    "shinyswatch",
    "openai"
]

# THESE ARE ONLY FOR YOU (Local development, testing, and docs)
[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = ["zensical>=0.0.29", "mkdocstrings-python>=2.0.3"]
dev = [
    "seroepi[app]", # Installs all user extras into your dev environment
    {include-group = "test"},
    {include-group = "docs"}
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seroepi"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/seroepi/_version.py"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"  # Matched to your requires-python
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY"
]
ignore = [
    "E501", # LineTooLong
    "E731", # DoNotAssignLambda
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
